tests/testthat/test-parallel/syntax-error/tests/testthat.R
library(testthat)
library(ok)

test_check("ok")
